--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,15 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <style>
+    body{
+      background-image: url(./assets/halie-west-OYRGy70RT2g-unsplash.jpg);
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+      height: auto;
+    }
+  </style>
 </head>
 <body>
   <app-root></app-root>
